# game_server

./: .gitignore
client-net-script/script/: CreatePlane.cs
client-net-script/script/net/: GameClient.cs  MessageHeader.cs  ObjectBytesTrans.cs  Protocol.cs  SocketClient.cs
client-net-script/script/protos/: Login.cs  MsgMng.cs  client_proto.cs  login_proto.cs
dataserver/: CMakeLists.txt  CmdHandler.cpp  CmdHandler.h  DataServer.cpp  DataServer.h  DataThread.cpp  DataThread.h  DsMsgChainer.cpp  DsMsgChainer.h  GsConnectionMng.h  GsHandler.cpp  GsHandler.h  Mysql.cpp  Mysql.h  PlayerDataMng.cpp  PlayerDataMng.h  ServerConfig.cpp  ServerConfig.h  SqlTables.h  header.h  main.cpp
dataserver/config/: ServerConfig.cpp  ServerConfig.h
dataserver/gsmng/: GsConnectionMng.cpp  GsConnectionMng.h
dataserver/handlers/: CmdHandler.cpp  CmdHandler.h  DsMsgChainer.cpp  DsMsgChainer.h  GsHandler.cpp  GsHandler.h
dataserver/mysql/: DataThread.cpp  DataThread.h  Mysql.cpp  Mysql.h  PlayerDataMng.cpp  PlayerDataMng.h  SqlTables.h
dataserver/xml/: ActorList.xml  ArenaRobot.xml  ArenaRobotName.xml  PlayerName.xml  Role.xml
gameserver/: CMakeLists.txt  GameServer.cpp  GameServer.h  header.h  main.cpp
gameserver/config/: CMakeLists.txt  ServerConfig.cpp  ServerConfig.h  SlitherConfig.cpp  SlitherConfig.h
gameserver/fsm/: CMakeLists.txt  State.cpp  State.h  StateImpls.cpp  StateImpls.h
gameserver/handlers/: CMakeLists.txt  ClientHandler.cpp  ClientHandler.h  DsHandler.cpp  DsHandler.h  GsMsgChainer.cpp  GsMsgChainer.h  LobbyHandler.cpp  LobbyHandler.h
gameserver/plane_shooting/: Bullet.cpp  Bullet.h  CMakeLists.txt  FixedQuadTree.cpp  FixedQuadTree.h  Map.h  Object.h  Plane.cpp  Plane.h  QuadTree.cpp  QuadTree.h  SceneMng2.cpp  SceneMng2.h
gameserver/playermng/: PlayerMng.h
gameserver/scenemng-alpha/: CMakeLists.txt  Map.cpp  Map.h  SceneMng.cpp  SceneMng.h
gameserver/slither/: Buff.cpp  Buff.h  CMakeLists.txt  Factory.cpp  Factory.h  Food.h  GameRoom.cpp  GameRoom.h  Object.cpp  Object.h  PlayerMng.cpp  PlayerMng.h  Scene.cpp  Scene.h  SlitherMath.cpp  SlitherMath.h  Snake.cpp  Snake.h  TeamScene.cpp  TeamScene.h
lobbyserver/: CMakeLists.txt  ConfigPath.h  LobbyServer.cpp  LobbyServer.h  header.h  main.cpp
lobbyserver/config/: CMakeLists.txt  GradeConfig.cpp  GradeConfig.h  LvExpConfig.cpp  LvExpConfig.h  LvExpLenConfig.cpp  LvExpLenConfig.h  LvExpRankConfig.cpp  LvExpRankConfig.h  LvExpSettlement.cpp  LvExpSettlement.h  ServerConfig.cpp  ServerConfig.h  SkinConfig.cpp  SkinConfig.h
lobbyserver/gsgroup/: CMakeLists.txt  ClientConnMgr.cpp  ClientConnMgr.h  GameGroupMng.cpp  GameGroupMng.h  Team.cpp  Team.h  TeamMng.cpp  TeamMng.h
lobbyserver/handlers/: CMakeLists.txt  ClientMsgHandler.cpp  ClientMsgHandler.h  GameServerHandler.cpp  GameServerHandler.h  LobbyMsgChainer.cpp  LobbyMsgChainer.h
lobbyserver/jsonhelper/: CMakeLists.txt  JsonHelper.cpp  JsonHelper.h
lobbyserver/lzSDK/: CMakeLists.txt  lzSDK.cpp  lzSDK.h
lobbyserver/mysql/: CMakeLists.txt  DataMng.cpp  DataMng.h  SqlTables.h
lobbyserver/mysql/mysqlVO/: MysqlObjVO.h
lobbyserver/playermng/: CMakeLists.txt  PlayerMng.cpp  PlayerMng.h  PlayerStatisticsMgr.cpp  PlayerStatisticsMgr.h  ServerService.cpp  ServerService.h  playerMsg.cpp  playerMsg.h
log4cplus-1.1.3/: REVISION
log4cplus-1.1.3/msvc10/Win32/bin.Debug/: log4cplusD.exp  log4cplusD.lib
loginserver/: LoginServer.cpp  LoginServer.h  header.h  main.cpp
loginserver/config/: ServerConfig.cpp  ServerConfig.h
loginserver/handlers/: ClientHandler.cpp  ClientHandler.h  MsgChainer.cpp  MsgChainer.h
loginserver/login/: LoginMng.cpp  LoginMng.h
loginserver/mysql/: DBMng.cpp  DBMng.h
network/: CMakeLists.txt  ClientSession.hpp  Connection.cpp  Connection.h  IConnection.h  IMsgChainer.h  IMsgHandler.h  IMsgParser.h  INetCluster.h  ITimerTrigger.h  MessageHeader.h  MsgBuffer.h  MsgChainer.cpp  MsgChainer.h  NetCluster.cpp  NetCluster.h  ServerSession.hpp  TimerTrigger.h  header.h
protocol/: client.cs  client_proto.cs  slither_client_proto.cs
protocol/protos/: client.proto  gen_C#-proto.bat  gen_proto.bat  login.proto  slither_client.proto
python-scripts/: ClientProtocol.py  ClientSimulator.py
redisclient/: CMakeLists.txt  anet.cpp  redisclient.h
tinyxml/: makefile
utils/: CMakeLists.txt  Mysql.cpp  Mysql.h  ProtoTemplate.hpp  SqlParser.cpp  SqlParser.h  Utility.cpp  Utility.h
win-proj/: game_server.sln
win-proj/Debug/: redisclient.lib
win-proj/Release/: redisclient.lib
win-proj/TestNetwork/: TestNetwork.vcxproj  main.cpp
win-proj/TestQuadTree/: Bullet.h  Plane.cpp  Plane.h  SceneMng2.cpp  SceneMng2.h  TestQuadTree.vcxproj  TestQuadTree.vcxproj.filters  main.cpp
win-proj/dataserver/: dataserver.vcxproj  dataserver.vcxproj.filters  ds.properties  ds.xml
win-proj/dataserver/sql/: create_global_table.sql
win-proj/gameserver/: gameserver.vcxproj  gameserver.vcxproj.filters  gs.properties  gs.xml  srv_CAIBakedNavmesh.navmesh
win-proj/lobbyserver/: lobbyserver.vcxproj  lobbyserver.vcxproj.filters
win-proj/loginserver/: loginserver.vcxproj  loginserver.vcxproj.filters  ls.properties  ls.xml
win-proj/network/: network.vcxproj  network.vcxproj.filters
win-proj/redisclient/: ReadMe.txt  redisclient.vcxproj  redisclient.vcxproj.filters
win-proj/utils/: utils.vcxproj  utils.vcxproj.filters
